# mnllib.py

./: .flake8  .gitignore  README.md  mypy.ini  pyproject.toml
.github/workflows/: check.yml
mnllib/: __init__.py  compression.py  consts.py  managers.py  misc.py  script.py  text.py  utils.py
tests/: test_rebuild.py
