[tool.poetry]
name = "mnllib"
version = "0.1.0"
description = "Python library for the Mario & Luigi games."
authors = ["Dimitar Dimitrov <dmtrdmtrov@gmail.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
flake8-pytest-style = "^2.0.0"
flake8 = "^7.1.1"
pytest = "^8.3.2"
mypy = "^1.11.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
